--- a/.devcontainer/fedora/devcontainer.json
+++ b/.devcontainer/fedora/devcontainer.json
@@ -1,5 +1,5 @@
 {
   "name": "Fedora DevContainer",
   "image": "fedora:latest",
-  "onCreateCommand": "dnf install -y git zsh gcc gcc-c++ which"
+  "onCreateCommand": "dnf install -y git zsh gcc gcc-c++ which wget"
 }
