Add github cli feature

--- a/.devcontainer/ubuntu-noble/devcontainer.json
+++ b/.devcontainer/ubuntu-noble/devcontainer.json
@@ -1,4 +1,7 @@
 {
   "name": "Ubuntu Noble DevContainer",
-  "image": "mcr.microsoft.com/devcontainers/base:noble"
+  "image": "mcr.microsoft.com/devcontainers/base:noble",
+  "features": {
+    "ghcr.io/devcontainers/features/github-cli:1": {}
+  }
 }
