--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -19,11 +19,11 @@ jobs:
     name: Ubuntu Noble DevContainer
     steps:
       - uses: actions/checkout@v4
-      - name: Run setup.sh in Ubuntu Noble devcontainer
+      - name: Run setup.sh and test binaries in Ubuntu Noble devcontainer
         uses: devcontainers/ci@v0.3
         with:
           configFile: .devcontainer/ubuntu-noble/devcontainer.json
-          runCmd: bash "setup.sh"
+          runCmd: bash "setup.sh" && bash ".github/test-binaries.sh"
           env: GH_TOKEN
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -36,11 +36,11 @@ jobs:
     name: Ubuntu Noble DevContainer with Node
     steps:
       - uses: actions/checkout@v4
-      - name: Run setup.sh in Ubuntu Noble devcontainer
+      - name: Run setup.sh and test binaries in Ubuntu Noble devcontainer
         uses: devcontainers/ci@v0.3
         with:
           configFile: .devcontainer/ubuntu-apt-node/devcontainer.json
-          runCmd: bash "setup.sh"
+          runCmd: bash "setup.sh" && bash ".github/test-binaries.sh"
           env: GH_TOKEN
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -53,11 +53,11 @@ jobs:
     name: Fedora DevContainer
     steps:
       - uses: actions/checkout@v4
-      - name: Run setup.sh in Fedora devcontainer
+      - name: Run setup.sh and test binaries in Fedora devcontainer
         uses: devcontainers/ci@v0.3
         with:
           configFile: .devcontainer/fedora/devcontainer.json
-          runCmd: bash "setup.sh"
+          runCmd: bash "setup.sh" && bash ".github/test-binaries.sh"
           env: GH_TOKEN
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
