--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -12,29 +12,52 @@ on:
 
 jobs:
   ubuntu-noble:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, ubuntu-24.04-arm]
+    runs-on: ${{ matrix.platform }}
     name: Ubuntu Noble DevContainer
     steps:
       - uses: actions/checkout@v4
-      - name: Run setup.sh in Ubuntu Noble devcontainer
+      - name: Run setup.sh and test binaries in Ubuntu Noble devcontainer
         uses: devcontainers/ci@v0.3
         with:
           configFile: .devcontainer/ubuntu-noble/devcontainer.json
-          runCmd: bash "setup.sh"
+          runCmd: bash "setup.sh" && bash ".github/test-binaries.sh"
+          env: GH_TOKEN
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  ubuntu-with-node:
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, ubuntu-24.04-arm]
+    runs-on: ${{ matrix.platform }}
+    name: Ubuntu Noble DevContainer with Node
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run setup.sh and test binaries in Ubuntu Noble devcontainer
+        uses: devcontainers/ci@v0.3
+        with:
+          configFile: .devcontainer/ubuntu-apt-node/devcontainer.json
+          runCmd: bash "setup.sh" && bash ".github/test-binaries.sh"
           env: GH_TOKEN
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   fedora:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, ubuntu-24.04-arm]
+    runs-on: ${{ matrix.platform }}
     name: Fedora DevContainer
     steps:
       - uses: actions/checkout@v4
-      - name: Run setup.sh in Fedora devcontainer
+      - name: Run setup.sh and test binaries in Fedora devcontainer
         uses: devcontainers/ci@v0.3
         with:
           configFile: .devcontainer/fedora/devcontainer.json
-          runCmd: bash "setup.sh"
+          runCmd: bash "setup.sh" && bash ".github/test-binaries.sh"
           env: GH_TOKEN
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
