--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -24,7 +24,9 @@ jobs:
         with:
           configFile: .devcontainer/ubuntu-noble/devcontainer.json
           runCmd: bash "setup.sh" && bash ".github/test-binaries.sh"
-          env: GH_TOKEN,STRICT_MODE
+          env: |
+            GH_TOKEN
+            STRICT_MODE
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           STRICT_MODE: true
@@ -42,7 +44,9 @@ jobs:
         with:
           configFile: .devcontainer/ubuntu-apt-node/devcontainer.json
           runCmd: bash "setup.sh" && bash ".github/test-binaries.sh"
-          env: GH_TOKEN,STRICT_MODE
+          env: |
+            GH_TOKEN
+            STRICT_MODE
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           STRICT_MODE: true
@@ -60,7 +64,9 @@ jobs:
         with:
           configFile: .devcontainer/fedora/devcontainer.json
           runCmd: bash "setup.sh" && bash ".github/test-binaries.sh"
-          env: GH_TOKEN,STRICT_MODE
+          env: |
+            GH_TOKEN
+            STRICT_MODE
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           STRICT_MODE: true
